plang/testing/logs/false-incorrect/21/program21.p.p
m2rk H D nm8q.


a W.

rzIf (VOoV) (n5tb) k N7 :- ((l OnGb (sG zQE (uZ xaXe) (H))); (f1 Zew9 (G) (U) (uzz H Vy))), zgB8 BltS cLry STjh, sD DQk3D g9Z (Q); (e5 (R8bXf) UC), v (KJMF) (wjaHL z RY9 q), hA3H (GXDZ) (S) aLyQ; pla; (mIu).
n8m.


edz6 (AQ6) ubSN.


u8BK (zSi2 (NK) jA (orw8S xj (p (JqG) (P7Yk2) (TNF))) (XB)) (UX).


? (to (P) QDvQ bscQ yl, (gxLAM yCo ui6Be)), f3YBs cTAZ LGp (Nt) (S); ((wDzk3 (qSne (wNl vd us) GJ86) (MyIi)); yRr Wt GBVm x12 A28SG, mN d; fO).



